--- a/MvcCoreEFProcedures/Views/Shared/_Layout.cshtml
+++ b/MvcCoreEFProcedures/Views/Shared/_Layout.cshtml
@@ -23,17 +23,31 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark"
+                               asp-controller="Trabajadores"
+                               asp-action="Index">
+                                Trabajadores SP
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
                                asp-controller="Enfermos"
                                asp-action="Index">
                                 Enfermos SP
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-controller="VistaEmpleado"
+                               asp-action="Index">
+                                Vista Empleados
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" 
-                               asp-controller="Doctores" 
+                            <a class="nav-link text-dark"
+                               asp-controller="Doctores"
                                asp-action="DoctoresIncrementoSalarial">
                                 Doctores IncrementoSalarial
                             </a>
